--- a/Tailspin.WebUpgraded/CSS/structure.css
+++ b/Tailspin.WebUpgraded/CSS/structure.css
@@ -39,8 +39,8 @@ div.logo {
     background: transparent;
     left: 0;
     top: 0;
-    width: 250;
-    height: 250;
+    width: 250px;
+    height: 250px;
 }
 div.header div.shopping-cart {
 	float: right;
@@ -97,6 +97,7 @@ div.product-wrapper-btm {
 ul.footer {
 	margin: 0;
 	padding: 30px 10px 0 10px;
+    display: none; 
 }
 div.product-detail-top {
 	clear: both;
